fullSandbox11072023/force-app/main/default/objects/Secondary_Account__c/Secondary_Account__c.object-meta.xml
<CustomObject>
    <label>Secondary Account</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Secondary Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Secondary Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>