fullSandbox11072023/force-app/main/default/objects/Secondary_Account__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Secondary Accounts</relationshipLabel>
    <relationshipName>Secondary_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>