fullSandbox11072023/force-app/main/default/objects/Secondary_Account__c/fields/External_Id_c__c.field-meta.xml
<CustomField>
    <fullName>External_Id_c__c</fullName>
    <description>ANZ Org had an External ID field already.  This field holds that External Id value.</description>
    <label>External Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>