fullSandbox11072023/force-app/main/default/objects/Secondary_Account__c/fields/O4_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>O4_Reference_ID__c</fullName>
    <label>O4 Reference ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>