fullSandbox11072023/force-app/main/default/objects/Secondary_Account__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <formula>TEXT(Contact__r.Position_Job_Title__c)</formula>
    <label>Position</label>
    <type>Text</type>
</CustomField>