fullSandbox11072023/force-app/main/default/objects/Secondary_Account__c/fields/Primary_Hospital__c.field-meta.xml
<CustomField>
    <fullName>Primary_Hospital__c</fullName>
    <formula>Contact__r.Account.Name</formula>
    <label>Primary Hospital</label>
    <type>Text</type>
</CustomField>